"input" event is not fired when changing a select element's value https://bugs.webkit.org/show_bug.cgi?id=117526

Patch by Lorenzo Tilve <ltilve@igalia.com> on 2014-03-20
Reviewed by Antti Koivisto.

Source/WebCore:

Add a call to dispatch input event when listbox or menulist
values are modified.

According to the spec: "When the user agent is to send select update
notifications, queue a task to first fire a simple even that bubbles
named input at the select element, and then fire a simple event that
bubbles named change at the select element, using the user interaction
task source as the task source."

Tests: fast/forms/select/listbox-oninput-fired.html
       fast/forms/select/menulist-oninput-fired.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::listBoxOnChange):
(WebCore::HTMLSelectElement::dispatchChangeEventForMenuList):

LayoutTests:

Add tests to verify that input event is dispatched when listbox
or menulist values are modified.

* fast/forms/select/listbox-oninput-fired-expected.txt: Added.
* fast/forms/select/listbox-oninput-fired.html: Added.
* fast/forms/select/menulist-oninput-fired-expected.txt: Added.
* fast/forms/select/menulist-oninput-fired.html: Added.

Canonical link: https://commits.webkit.org/148508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165965 268f45cc-cd09-0410-ab3c-d52691b4dbfc